# parser_plus_pandas

./: data.txt  file(1).xlsx  file(2).xlsx  file.xlsx  main.py  paser.py  pyproject.toml
